@@ -547,7 +547,8 @@ void Image_window::create_surface
 
 	get_draw_dims(w, h, scale, fill_mode, game_width, game_height, inter_width, inter_height);
 
-	if ((w != game_width * scale || h != game_height * scale || force_bpp) && try_scaler(w, h) == false)
+	if ((game_width != inter_width || game_height != inter_height ||
+	     w != game_width * scale || h != game_height * scale || force_bpp) && try_scaler(w, h) == false)
 	{
 		// Try fallback to point scaler if it failed, if it doesn't work, we probably can't run
 		scaler = point;
@@ -733,7 +734,8 @@ bool Image_window::try_scaler(int w, int h)
 		scaler = point;
 	}
 	
-	if (w != game_width * scale || h != game_height * scale || force_bpp)
+	if (game_width != inter_width || game_height != inter_height ||
+	    w != game_width * scale || h != game_height * scale || force_bpp)
 	{
 		const ScalerInfo *info;
 
